--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
      <div class="title">
           <h1>Cần Giờ Thôi Chị Em Ơi 2024</h1>
           <p>Chuyến đi này là thanh xuân của chúng ta</p>
-          <p class="anhtaidesign">Designed by @anhtai</p>
+          <p class="anhtaidesign">Code and Designed by @anhtai</p>
      </div>
 
      <div class="timeline">
@@ -20,63 +20,97 @@
                     <h2>6:30 - 6:45 : Tập họp tại điểm nào đó</h2>
                     <p>
                          Chị em ta sẽ tập hợp tại một địa điểm nào đó,
-                         sau đó sẽ bắt đầu đi nhen, sẽ có rất nhiều,
-                         chúng ta sẽ chọn một địa điểm hợp lý
-                    </p>
-               </div>
-          </div>
-
-          <div class="checkpoint">
-               <div>
-                    <h2>6:30 - 6:45 : Tập họp tại điểm nào đó</h2>
-                    <p>
-                         Chị em ta sẽ tập hợp tại một địa điểm nào đó,
-                         sau đó sẽ bắt đầu đi nhen, sẽ có rất nhiều,
-                         chúng ta sẽ chọn một địa điểm hợp lý
-                    </p>
-               </div>
-          </div>
-
-          <div class="checkpoint">
-               <div>
-                    <h2>6:30 - 6:45 : Tập họp tại điểm nào đó</h2>
-                    <p>
-                         Chị em ta sẽ tập hợp tại một địa điểm nào đó,
-                         sau đó sẽ bắt đầu đi nhen, sẽ có rất nhiều,
-                         chúng ta sẽ chọn một địa điểm hợp lý
-                    </p>
-               </div>
-          </div>
-
-          <div class="checkpoint">
-               <div>
-                    <h2>6:30 - 6:45 : Tập họp tại điểm nào đó</h2>
-                    <p>
-                         Chị em ta sẽ tập hợp tại một địa điểm nào đó,
-                         sau đó sẽ bắt đầu đi nhen, sẽ có rất nhiều,
-                         chúng ta sẽ chọn một địa điểm hợp lý
-                    </p>
-               </div>
-          </div>
-
-          <div class="checkpoint">
-               <div>
-                    <h2>6:30 - 6:45 : Tập họp tại điểm nào đó</h2>
-                    <p>
-                         Chị em ta sẽ tập hợp tại một địa điểm nào đó,
-                         sau đó sẽ bắt đầu đi nhen, sẽ có rất nhiều,
-                         chúng ta sẽ chọn một địa điểm hợp lý
-                    </p>
-               </div>
-          </div>
-
-          <div class="checkpoint">
-               <div>
-                    <h2>6:30 - 6:45 : Tập họp tại điểm nào đó</h2>
-                    <p>
-                         Chị em ta sẽ tập hợp tại một địa điểm nào đó,
                          sau đó sẽ bắt đầu đi nhen
                     </p>
+                    <a href="" class="Google_Map">Google map</a>
+               </div>
+          </div>
+
+          <div class="checkpoint">
+               <div>
+                    <h2>6:45 - 8:30: Chạy ra Cần Giờ</h2>
+                    <p>
+                         Trên đường chạy ra Cần Giờ, chạy khoảng
+                         40 - 50 km/h thui mấy chú nhiều lắm, trên
+                         đường đi ghé ăn dừa nước (nghe nói ai đi 
+                         ra đây cũng ăn)     
+                    </p>
+                    <a href="https://maps.app.goo.gl/3gtUVhsej2v89ZpB9" class="Google_Map">Link Quán dừa nước nè</a>
+               </div>
+          </div>
+
+          <div class="checkpoint">
+               <div>
+                    <h2>8:30 - 9:00 : Check-in tại Ngã Ba Sống Ảo</h2>
+                    <p>
+                         Chị em ta sẽ chụp ảnh và quay trend Tik Tok tại đây nhen
+                    </p>
+                    <a href="https://maps.app.goo.gl/qyyakjDnacBYyPoc8" class="Google_Map">Link Ngã Ba Sống Ảo nè</a>
+               </div>
+          </div>
+
+          <div class="checkpoint">
+               <div>
+                    <h2>9:00 - 10:00 : Đi ra Lata Camping ngắm biển với Check-In</h2>
+                    <p>
+                         Chị em ta sẽ chạy ra chỗ Lata Camping ngắm biển và chụp ảnh và
+                         quay trend Tik Tok tại đây nhen.
+                    </p>
+                    <a href="https://maps.app.goo.gl/2Xsp2oEyzQDneBWL6" class="Google_Map">Link Lata Camping nè</a>
+               </div>
+          </div>
+
+          <div class="checkpoint">
+               <div>
+                    <h2>10:00 - 12:00 : Tham quan đảo Khỉ, bảo tàng rừng Sác</h2>
+                    <p>
+                         Chị em ta sẽ tham quan đảo khỉ và bảo tàng rừng Sác tại 
+                         đây nhen, chụp ảnh rồi quay trend Tik Tok đồ các thứ, 
+                         nhớ mang ít đồ coi chừng bị khỉ giật :>>
+                    </p>
+                    <a href="https://maps.app.goo.gl/tpw4FZ3y6SorcjLA9" class="Google_Map">Link Đảo khỉ và Bảo Tàng rừng Sác nè</a>
+               </div>
+          </div>
+
+          <div class="checkpoint">
+               <div>
+                    <h2>12:00 - 13:30 : Đi ăn trưa</h2>
+                    <p>
+                         Chị em ta sẽ ăn trưa tại quán Song Chi
+                    </p>
+                    <a href="https://maps.app.goo.gl/YgzT5qUPicEaTPWK9" class="Google_Map">Link Quán Song Chi</a>
+               </div>
+          </div>
+
+          <div class="checkpoint">
+               <div>
+                    <h2>13:30 - 14:30 : Chợ Hàng Dương</h2>
+                    <p>
+                         Chị em ta sẽ đi kiếm gì ăn ở chợ này hoặc kiếm gì mua đồ ăn để tối
+                         dìa Vin ăn, mà chỉ mua đồ tươi thôi chứ chỗ ăn bán cũng không ngon lắm
+                    </p>
+                    <a href="https://maps.app.goo.gl/AbM3i2kAGstsmgxS6" class="Google_Map">Link Chợ Hàng Dương</a>
+               </div>
+          </div>
+
+          <div class="checkpoint">
+               <div>
+                    <h2>14:30 - 16:00 : Ngồi Cafe Cần Giờ Coffee</h2>
+                    <p>
+                         Ngồi chill tại quán cafe Cần Giờ Coffee, cho tới chiều mát mát
+                         rồi dìa.
+                    </p>
+                    <a href="https://maps.app.goo.gl/oGa4FTmV2K6B4Cz37" class="Google_Map">Link Quán Coffee Cần Giờ</a>
+               </div>
+          </div>
+
+          <div class="checkpoint">
+               <div>
+                    <h2>16:00 - 17:30 : Chạy dìa Vin</h2>
+                    <p>
+                         Chạy dìa Vin
+                    </p>
+                    <a href="" class="Google_Map">Google map</a>
                </div>
           </div>
      </div>
