--- a/index.html
+++ b/index.html
@@ -113,6 +113,16 @@
                     <a href="" class="Google_Map">Google map</a>
                </div>
           </div>
+
+          <div class="checkpoint">
+               <div>
+                    <h2>17:30 - .... : Đang cập nhật</h2>
+                    <p>
+                         Ý kiến chị em
+                    </p>
+                    <a href="" class="Google_Map">Google map</a>
+               </div>
+          </div>
      </div>
 
 
